IF ( BUILD_EPS_SERVER )
    FILE ( GLOB EPS_SERVER_SOURCE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp )

    SET ( EPS_SERVER_BIN_FILE "${EPS_SERVER_BIN_NAME}" )

    IF ( NOT WIN32 AND NOT MINGW )
        ADD_EXECUTABLE ( ${EPS_SERVER_BIN_FILE} ${QT_GUI_TYPE} ${EPS_SERVER_SOURCE_FILES} )    
    ELSE (  )
        CONFIGURE_FILE ( "${EPS_SERVER_APP_ICON_FILE}" "${CMAKE_CURRENT_BINARY_DIR}/${EPS_SERVER_APP_ICON_FILE}"
            COPYONLY )
        CONFIGURE_FILE ( "${EPS_SERVER_RC_FILE}" "${CMAKE_CURRENT_BINARY_DIR}/${EPS_SERVER_RC_FILE}"
            @ONLY NEWLINE_STYLE CRLF )
        SET ( CMAKE_RC_COMPILER_INIT windres )
        ENABLE_LANGUAGE( RC )
        SET ( CMAKE_RC_COMPILE_OBJECT "<CMAKE_RC_COMPILER> <FLAGS> -O coff <DEFINES> -i <SOURCE> -o <OBJECT>")
        ADD_EXECUTABLE ( ${EPS_SERVER_BIN_FILE} ${QT_GUI_TYPE} ${EPS_SERVER_SOURCE_FILES} "${CMAKE_CURRENT_BINARY_DIR}/${EPS_SERVER_RC_FILE}" )
    ENDIF (  )

    FOREACH ( FLAG ${CXX11_FEATURE_LIST} )
        SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE}
            APPEND PROPERTY COMPILE_DEFINITIONS ${FLAG} )
    ENDFOREACH ( FLAG ${CXX11_FEATURE_LIST} )

    TARGET_LINK_LIBRARIES ( ${EPS_SERVER_BIN_FILE}
        ${MYLIB_BIN_NAME}
        ${Boost_LIBRARIES}
    )

    IF ( DEFINED EPS_SERVER_DEFINES )
        SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "${EPS_SERVER_DEFINES}" )
    ENDIF (  )

    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_BUILD_COMPILER=\"${EPS_BUILD_COMPILER}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_BUILD_HOST=\"${EPS_BUILD_HOST}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_BUILD_PROCESSOR=\"${EPS_BUILD_PROCESSOR}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_BUILD_SYSTEM=\"${EPS_BUILD_SYSTEM}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_COMPANY_NAME=\"${EPS_PRODUCT_COMPANY_NAME}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_COPYRIGHT_HOLDER=\"${EPS_PRODUCT_COPYRIGHT_HOLDER}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_COPYRIGHT_YEAR=\"${EPS_PRODUCT_COPYRIGHT_YEAR}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_COPYRIGHT=\"${EPS_PRODUCT_COPYRIGHT}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_DEVELOPER=\"${EPS_PRODUCT_DEVELOPER}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_PRODUCT_INTERNAL_NAME=\"${EPS_SERVER_PRODUCT_INTERNAL_NAME}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_PRODUCT_NAME=\"${EPS_SERVER_PRODUCT_NAME}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_VERSION_MAJOR=\"${EPS_SERVER_PRODUCT_VERSION_MAJOR}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_VERSION_MINOR=\"${EPS_SERVER_PRODUCT_VERSION_MINOR}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_VERSION_PATCH=\"${EPS_SERVER_PRODUCT_VERSION_PATCH}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_VERSION_REVISION=\"${EPS_SERVER_PRODUCT_VERSION_REVISION}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_VERSION=\"${222}\"" )
    SET_PROPERTY ( TARGET ${EPS_SERVER_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_DESCRIPTION=\"${EPS_SERVER_PRODUCT_DESCRIPTION}\"" )

    GET_PROPERTY( EPS_SERVER_EXECUTABLE TARGET ${EPS_SERVER_BIN_FILE} PROPERTY LOCATION )

    IF ( CXX_GCC AND GCC_STRIP_EXECUTABLE )
        ADD_CUSTOM_COMMAND ( TARGET ${EPS_SERVER_BIN_FILE}
            POST_BUILD
            COMMAND strip ${EPS_SERVER_EXECUTABLE}
            COMMAND strip -R.comment ${EPS_SERVER_EXECUTABLE}
            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
        )
    ENDIF (  )

    IF ( WIN32 AND MINGW )
        GET_PROPERTY( MYLIB_LIBRARY_PATH TARGET ${MYLIB_BIN_NAME} PROPERTY LOCATION )

        ADD_CUSTOM_COMMAND ( TARGET ${EPS_SERVER_BIN_FILE}
            POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${MYLIB_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${BOOST_DATE_TIME_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${BOOST_FILESYSTEM_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${BOOST_IOSTREAMS_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${BOOST_SYSTEM_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${BOOST_THREAD_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${BOOST_ZLIB_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${CPPDB_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${CPPDB_SQLITE3_DRIVER}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${CRYPTOPP_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${GEOIP_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${LIBB64_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${SQLITE3_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${VMIME_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${ZEROMQ_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
        )

        IF ( QT5_LIBRARY_PATH )
            FOREACH ( TARGET_FILE ${MINGW_CPP_RUNTIME_FILES} )
                ADD_CUSTOM_COMMAND ( TARGET ${EPS_SERVER_BIN_FILE}
                POST_BUILD
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
               "${QT5_LIBRARY_PATH}/${TARGET_FILE}" "${CMAKE_CURRENT_BINARY_DIR}"
            )
            ENDFOREACH( TARGET_FILE ${MINGW_CPP_RUNTIME_FILES} )
        ENDIF (  )
    ENDIF (  )
ENDIF (  )


