FILE ( GLOB MYLIB_SOURCE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp )

SET ( MYLIB_BIN_FILE "${MYLIB_BIN_NAME}" )

ADD_LIBRARY ( ${MYLIB_BIN_FILE} ${MYLIB_LIB_TYPE} ${MYLIB_SOURCE_FILES} )

FOREACH ( FLAG ${CXX11_FEATURE_LIST} )
    SET_PROPERTY ( TARGET ${MYLIB_BIN_FILE}
        APPEND PROPERTY COMPILE_DEFINITIONS ${FLAG} )
ENDFOREACH ( FLAG ${CXX11_FEATURE_LIST} )

IF ( MINGW )
    TARGET_LINK_LIBRARIES ( ${MYLIB_BIN_FILE} "-lws2_32 -lwsock32" )
ENDIF (  )

IF ( NOT BUILD_EPS_DESKTOP )
    TARGET_LINK_LIBRARIES ( ${MYLIB_BIN_FILE}
        ${Boost_LIBRARIES}
        ${CPPDB_LIBRARY}
        ${CRYPTOPP_LIBRARY}
        ${GEOIP_LIBRARY}
        ${LIBB64_LIBRARY}
        ${SQLITE3_LIBRARY}
        ${VMIME_LIBRARY}
        ${ZEROMQ_LIBRARY}
    )
    SET_TARGET_PROPERTIES ( ${MYLIB_BIN_FILE} PROPERTIES COMPILE_DEFINITIONS "DMYLIB_SERVER_BULD")
ELSE (  )
    TARGET_LINK_LIBRARIES ( ${MYLIB_BIN_FILE}
        ${Boost_LIBRARIES}
        ${CPPDB_LIBRARY}
        ${CRYPTOPP_LIBRARY}
        ${LIBB64_LIBRARY}
        ${SQLITE3_LIBRARY}
        ${ZEROMQ_LIBRARY}
    )
ENDIF (  )

IF ( NOT WIN32 )
    SET_TARGET_PROPERTIES ( ${MYLIB_BIN_FILE} PROPERTIES COMPILE_DEFINITIONS "BUFFERSIZE=${LIBB64_BUFFERSIZE}" )
ELSE (  )
    SET_TARGET_PROPERTIES ( ${MYLIB_BIN_FILE} PROPERTIES COMPILE_DEFINITIONS "BUFFERSIZE=${LIBB64_BUFFERSIZE}; WIN32_LEAN_AND_MEAN" )
ENDIF (  )

GET_PROPERTY(MYLIB_LIBRARY TARGET ${MYLIB_BIN_FILE} PROPERTY LOCATION)

IF ( CXX_GCC AND GCC_STRIP_EXECUTABLE )
    ADD_CUSTOM_COMMAND ( TARGET ${MYLIB_BIN_FILE}
        POST_BUILD
        COMMAND strip ${MYLIB_LIBRARY}
        COMMAND strip -R.comment ${MYLIB_LIBRARY}
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )
ENDIF (  )


