FILE ( GLOB MYLIB_SOURCE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp )

SET ( MYLIB_BIN_FILE "${MYLIB_BIN_NAME}" )

ADD_LIBRARY ( ${MYLIB_BIN_FILE} ${MYLIB_LIB_TYPE} ${MYLIB_SOURCE_FILES} )

FOREACH ( FLAG ${CXX11_FEATURE_LIST} )
    SET_PROPERTY ( TARGET ${MYLIB_BIN_FILE}
        APPEND PROPERTY COMPILE_DEFINITIONS ${FLAG} )
ENDFOREACH ( FLAG ${CXX11_FEATURE_LIST} )

IF ( MINGW )
    TARGET_LINK_LIBRARIES ( ${MYLIB_BIN_FILE} "-lws2_32 -lwsock32" )
ENDIF (  )

IF ( NOT BUILD_EPS_DESKTOP )
    TARGET_LINK_LIBRARIES ( ${MYLIB_BIN_FILE}
        ${Boost_LIBRARIES}
        ${CPPDB_LIBRARY}
        ${CRYPTOPP_LIBRARY}
        ${GEOIP_LIBRARY}
        ${LIBB64_LIBRARY}
        ${SQLITE3_LIBRARY}
        ${VMIME_LIBRARY}
        ${ZEROMQ_LIBRARY}
    )
    SET_PROPERTY ( TARGET ${MYLIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "DMYLIB_SERVER_BULD" )
ELSE (  )
    TARGET_LINK_LIBRARIES ( ${MYLIB_BIN_FILE}
        ${Boost_LIBRARIES}
        ${CPPDB_LIBRARY}
        ${CRYPTOPP_LIBRARY}
        ${LIBB64_LIBRARY}
        ${SQLITE3_LIBRARY}
        ${ZEROMQ_LIBRARY}
    )
ENDIF (  )

IF ( DEFINED MYLIB_DEFINES )
    SET_PROPERTY ( TARGET ${MYLIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "${MYLIB_DEFINES}" )
ENDIF (  )

IF ( DEFINED LIBB64_BUFFERSIZE )
    SET_PROPERTY ( TARGET ${MYLIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "BUFFERSIZE=${LIBB64_BUFFERSIZE}" )
ENDIF (  )

SET_PROPERTY ( TARGET ${MYLIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "IPC_PROTOCOL_NAME=\"${EPS_IPC_PROTOCOL_NAME}\"" )
SET_PROPERTY ( TARGET ${MYLIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "IPC_PROTOCOL_VERSION_MAJOR=${EPS_IPC_PROTOCOL_VERSION_MAJOR}" )
SET_PROPERTY ( TARGET ${MYLIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "IPC_PROTOCOL_VERSION_MINOR=${EPS_IPC_PROTOCOL_VERSION_MINOR}" )
SET_PROPERTY ( TARGET ${MYLIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "IPC_PROTOCOL_VERSION=\"${EPS_IPC_PROTOCOL_VERSION}\"" )

GET_PROPERTY(MYLIB_LIBRARY TARGET ${MYLIB_BIN_FILE} PROPERTY LOCATION)

IF ( CXX_GCC AND GCC_STRIP_EXECUTABLE )
    ADD_CUSTOM_COMMAND ( TARGET ${MYLIB_BIN_FILE}
        POST_BUILD
        COMMAND strip ${MYLIB_LIBRARY}
        COMMAND strip -R.comment ${MYLIB_LIBRARY}
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )
ENDIF (  )


